Use Guanco Ollama driver
Signed-off-by: Drasko Draskovic <drasko.draskovic@gmail.com>

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,9 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+    {guanco, ".*", {git, "https://github.com/drasko/guanco.git", {branch, "main"}}}
+]}.
 
 {shell, [
-  % {config, "config/sys.config"},
-    {apps, [brigade]}
+  {config, "config/sys.config"},
+  {apps, [brigade]}
 ]}.
